[package]
name = "pump19-rs"
version = "0.2.0"
repository = "https://github.com/pump19/pump19-rs"
authors = ["Kevin Perry"]
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.34"
dotenv = "0.15.0"
futures = "0.3.7"
irc = "0.14.1"
lazy_static = "1.4.0"
leaky-bucket = "0.8.2"
log = "0.4.11"
pretty_env_logger = "0.4.0"
regex = "1.4.2"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_regex = "1.1.0"
reqwest = { version = "0.10.8", features = ["json"] }
sqlx = { version = "0.3.5", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "postgres",
] }
tokio = { version = "0.2.22", features = ["macros"] }

[profile.release]
lto = true
panic = "abort"
