[package]
authors = ["Kevin Perry"]
edition = "2018"
license = "MIT"
name = "pump19-rs"
repository = "https://github.com/pump19/pump19-rs"
version = "0.2.0"

[dependencies]
anyhow = "1.0.45"
dotenv = "0.15.0"
futures = "0.3.17"
irc = "0.15.0"
lazy_static = "1.4.0"
leaky-bucket = "0.11.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = {version = "0.11.6", features = ["json"]}
serde = "1.0.130"
serde_derive = "1.0.130"
serde_regex = "1.1.0"
sqlx = {version = "0.5.9", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
]}
tokio = {version = "1.13.0", features = ["macros"]}

[profile.release]
lto = true
panic = "abort"
