[package]
authors = ["Kevin Perry"]
edition = "2018"
license = "MIT"
name = "pump19-rs"
repository = "https://github.com/pump19/pump19-rs"
version = "0.2.1"

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
futures = "0.3.25"
irc = "0.15.0"
lazy_static = "1.4.0"
leaky-bucket = "0.12.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.0"
reqwest = {version = "0.11.12", features = ["json"]}
serde = "1.0.147"
serde_derive = "1.0.147"
serde_regex = "1.1.0"
sqlx = {version = "0.6.2", default-features = false, features = [
  "macros",
  "offline",
  "postgres",
  "runtime-tokio-rustls",
]}
tokio = {version = "1.21.2", features = ["macros"]}

[profile.release]
lto = true
panic = "abort"
